# MoranSimulator

./: .gitignore  CMakeLists.txt  MoranConfig.h.in  MoranModel.cpp  MoranModel.h  README.md  compile.sh  main.cpp  nothing.cpp  template_utils.tpp  utils.h
MoranModel/: CMakeLists.txt  MoranModel.cpp  MoranModel.h
utils/: template_utils.tpp  utils.cpp  utils.h
